[package]
name = "discordhose"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
lazy_static = "1.4.0"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12.23", features = ["json"] }
rocketman = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
